# vaapi_h264

./: .gitignore  README.md  go.mod  go.sum  h264encoder.c  loadsurface.h  loadsurface_yuv.h  params.go  va_display.c  va_display.h  va_display_drm.c  va_h264.h  vaapi_h264.go  vaapi_h264_unsupported.go  vaconsts.go
cmake/: CMakeLists.txt
